		- Updated Roundube addon to version 0.8.4

Tickets:
	- Fixed #482: Defect - Alias edit forward url not possible. Validation incorrect
	- Fixed #499: When deleting a domain alias, the custom DNS records (including those related to external mail
		server(s)) should be deleted
	- Fixed #500: Mail quota edit link has wrong id for alias, subdomain and aliassubs mails.
	- Fixed #503: Bug - DNS entries for subdomains are not re-added in db zone file
	- Fixed #504: Roundcube 0.8.2
	- Fixed #507: Cosmetics - External mail servers features status not show
	- Fixed #508: German Umlaut in Custom DNS were shown wrong
	- Fixed #509: Tools: PHPMyAdmin 3.5.3 released
	- Fixed #511: Enhancement - Show disk usage detail (web, mail, sql) on client side
	- Fixed #512: autoresponder: lines in transport file not correct
	- Fixed #514: Email forward from domain A to domain B not working
	- Fixed #520: Defect - migrateMailboxes: Use of uninitialized value
	- Fixed #522: Bug - Subdomain redirects with "https" or "ftp" don't work
	- Fixed #524: Update - AjaxPlorer 4.2.3 released
	- Fixed #525: Update - phpMyAdmin 3.5.5 released
	- Fixed #527: Update - Roundcube 0.8.4 released
	- Fixed #532: Review - Database update 53 - ftp password
	- Fixed #535: Defect - Roundcube does not work with courier
	- Fixed #539: Enhancement - i-MSCP tools - Composer support
	- Fixed #541: Task - Move PhpMyAdmin to packagist and make it as addon

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-beta2
-------------------------------------------------------------------------------------

2012-09-14: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-beta2
	
Features / Enhancements / Bugfixes:

GUI:
	Vendor:
		- Updated Zend Framework to 1.11.12

	Tools:
		- Updated PhpMyAdmin to version 3.5.3
		- Updated Roundcube to 0.8.2

Tickets:
	- Fixed #433: PHP directive editor: register_globals does not exist in php 5.4.0 and above