@@ -52,6 +52,7 @@ Tickets:
 	- Fixed #499: When deleting a domain alias, the custom DNS records (including those related to external mail
 		server(s)) should be deleted
 	- Fixed #500: Mail quota edit link has wrong id for alias, subdomain and aliassubs mails.
+	- Fixed #501: Slow query and wrong traffic count in "Edit Domain"
 	- Fixed #503: Bug - DNS entries for subdomains are not re-added in db zone file
 	- Fixed #504: Roundcube 0.8.2
 	- Fixed #507: Cosmetics - External mail servers features status not show
